[gd_scene load_steps=10 format=3 uid="uid://b71aeuy3e5tik"]

[ext_resource type="PackedScene" uid="uid://cg575k08ivsdh" path="res://player/head/SnakeHead.tscn" id="1_8d1al"]
[ext_resource type="Script" uid="uid://c2xkfh071ilnu" path="res://levels/level_template.gd" id="1_uqgy7"]
[ext_resource type="Script" uid="uid://cu7ghb4pcli5g" path="res://levels/camera_shake.gd" id="3_2x4sj"]
[ext_resource type="TileSet" uid="uid://21ioic27tl8u" path="res://levels/tilesets/groud_tileset.tres" id="4_o0k1y"]
[ext_resource type="TileSet" uid="uid://cktqjonxsaeyi" path="res://levels/tilesets/boxes_tileset.tres" id="5_mvtix"]
[ext_resource type="TileSet" uid="uid://rms8er5m05td" path="res://levels/tilesets/boxes_spot_tileset.tres" id="6_1ot7w"]
[ext_resource type="TileSet" uid="uid://cucyidbx3ps3m" path="res://levels/tilesets/collectibles_tileset.tres" id="7_os6s8"]
[ext_resource type="TileSet" uid="uid://ds7w1wpayltr7" path="res://levels/tilesets/snake_tail_tileset.tres" id="8_pv1ge"]
[ext_resource type="TileSet" uid="uid://b2nmuhsawiwpe" path="res://levels/tilesets/portals_tileset.tres" id="9_os6s8"]

[node name="LevelTemplate" type="Node2D"]
script = ExtResource("1_uqgy7")

[node name="ColorRect" type="ColorRect" parent="."]
custom_minimum_size = Vector2(320, 180)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -160.0
offset_top = -90.0
offset_right = 160.0
offset_bottom = 90.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.133333, 0.137255, 0.137255, 1)

[node name="CameraShake" type="Camera2D" parent="."]
script = ExtResource("3_2x4sj")

[node name="SnakeHead" parent="." instance=ExtResource("1_8d1al")]
unique_name_in_owner = true
position = Vector2(-8, -9)

[node name="SnakeParts" type="Node2D" parent="."]

[node name="GroundLayer" type="TileMapLayer" parent="."]
tile_set = ExtResource("4_o0k1y")

[node name="BoxesLayer" type="TileMapLayer" parent="."]
tile_set = ExtResource("5_mvtix")

[node name="BoxesSpotLayer" type="TileMapLayer" parent="."]
tile_set = ExtResource("6_1ot7w")

[node name="CollectiblesLayer" type="TileMapLayer" parent="."]
tile_set = ExtResource("7_os6s8")

[node name="SnakeTailLayer" type="TileMapLayer" parent="."]
tile_set = ExtResource("8_pv1ge")

[node name="PortalLayer" type="TileMapLayer" parent="."]
tile_set = ExtResource("9_os6s8")
